# pico-iot-project

./: CMakeLists.txt  main.c  main_blinky.c  main_full.c  pico-iot-project.c
hello_world/: CMakeLists.txt
hello_world/picow/: output_handler.cpp
hello_world_custom/: CMakeLists.txt  main_functions.cpp
hello_world_custom/picow/: output_handler.cpp
